ojdk16 and above need special flags when trying to use PKCS11 wrapper