@@ -10,5 +10,13 @@ if [ "x$TESTSRC" == x ] ; then
   TESTSRC=.
 fi
 
+# this is needed for ojdk 16 and above
+FLAGS="--add-modules jdk.crypto.cryptoki --add-exports jdk.crypto.cryptoki/sun.security.pkcs11.wrapper=ALL-UNNAMED"
+
+# removing the above for ojdk lower than 16
+if [ 16 -gt $OTOOL_JDK_VERSION ]; then
+    FLAGS=""
+fi
+
 # only testing whether the Test.java is buildable, dont need to run it (see bug)
-${JAVAC} -d . ${TESTSRC}/Test.java
+${JAVAC} -d . $FLAGS ${TESTSRC}/Test.java
